fixed the login behind the carousel and added face recognition api (di pako sure unsaon ni pagpagana)

--- a/src/pages/Login/Login.module.css
+++ b/src/pages/Login/Login.module.css
@@ -3,6 +3,7 @@
   top: 0;
   left: 0;
   right: 0;
+  z-index: 10;
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.5);
   display: flex;
@@ -15,6 +16,7 @@
   background: linear-gradient(to bottom, #97D8F5 0%, #97D8F5 50%, #97D8F5 100%);
   padding: 2rem;
   border-radius: 12px;
+  z-index: 11;
   width: 100%;
   max-width: 400px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
